[tool.poetry]
name = "4711"
version = "0.0.2"
description = "A collection of CLI tools for working with data structures, parsing and formatting"
authors = ["Carl Oscar Aaro <hello@carloscar.com>"]
homepage = "https://github.com/kalaspuff/4711"
repository = "https://github.com/kalaspuff/4711"
packages = [
    { include = "_4711/**/*.py" },
]
keywords = ["4711", "data structures", "data", "structure"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.7 || ^3.8 || ^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-black = "^0.2.0"
flake8-isort = "^4.0.0"
isort = { version = "^5.5.3", extras = ["pyproject"] }
pytest = "^6.1.0"
pytest-cov = "^2.10.0"
black = "=20.8b1"
mypy = "^0.782"
codecov = "^2.1.9"

[tool.poetry.scripts]
4711 = "_4711:cli"

[tool.black]
line-length = 120
target_version = ["py37", "py38"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "_4711"
skip = ".mypy_cache,__pycache__"
